add fencing token
